<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_setup_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_base"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/boardgamecollector"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:rowCount="2"
        android:columnCount="2"
        >

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/rim_grey"
            android:id="@+id/user_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/user_logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user_logo" />
                <TextView
                    android:id="@+id/text_user"
                    android:textColor="@color/golden_light"
                    android:paddingTop="10dp"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeMaxTextSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_none"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView> <androidx.cardview.widget.CardView/>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/rim_grey"
            android:id="@+id/time_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/time_logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/time_logo" />
                <TextView
                    android:id="@+id/text_date"
                    android:textColor="@color/golden_light"
                    android:paddingTop="10dp"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeMaxTextSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_synchronization_01_01_2023"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView> <androidx.cardview.widget.CardView/>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/rim_grey"
            android:id="@+id/dice_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/dice_logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/dice_logo" />
                <TextView
                    android:id="@+id/text_games"
                    android:textColor="@color/golden_light"
                    android:paddingTop="10dp"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeMaxTextSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_0"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView> <androidx.cardview.widget.CardView/>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/rim_grey"
            android:id="@+id/plus_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/plus_logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/plus_logo" />
                <TextView
                    android:id="@+id/text_expansions"
                    android:textColor="@color/golden_light"
                    android:paddingTop="10dp"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeMaxTextSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expansions_0"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView> <androidx.cardview.widget.CardView/>
    </GridLayout>

</RelativeLayout>